<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_margin="30dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/app_logo"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/light_bg"/>
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/slide_desc"
            android:textStyle="bold"
            android:textColor="@color/light_bg"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/light_bg"
            android:background="@drawable/edittext_bg"
            android:hint="@string/phone_number"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/slide_desc"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="@color/light_bg"
            android:textColorHint="@color/light_bg"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/slide_desc"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@color/light_bg"
            android:background="@drawable/purple_btn_bg_selector"
            android:text="@string/login"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/forgot_pass_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/light_bg"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/forgot_pass"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide_str"
                android:textColor="@color/light_bg"
                android:textSize="16dp"/>
            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/light_bg"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="16dp"
                android:text="@string/register"/>
        </LinearLayout>

        <TextView
            android:id="@+id/error_display_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/errorColor"/>
        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </LinearLayout>

</RelativeLayout>