<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_gradient_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back_btn_ic"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/transparent_selector"/>-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/app_logo"
                android:layout_centerInParent="true"
                android:padding="10dp"
                />
            <ImageButton
                android:id="@+id/settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/settings_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circular_btn_bg_selector"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/activity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/light_bg"
            android:textSize="@dimen/moderate_txt"
            android:drawableLeft="@mipmap/faq_label_ic"
            android:drawableStart="@mipmap/faq_label_ic"
            android:text="@string/faq"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq1"
                    android:background="@color/dark_bg"
                    android:textColor="@color/light_bg"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="@dimen/moderate_txt"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/desc_padding"
                    android:paddingRight="@dimen/desc_padding"
                    android:text="@string/faq_answer1"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq2"
                    android:background="@color/dark_bg"
                    android:textColor="@color/light_bg"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="@dimen/moderate_txt"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/desc_padding"
                    android:paddingRight="@dimen/desc_padding"
                    android:text="@string/faq_answer2"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq3"
                    android:background="@color/dark_bg"
                    android:textColor="@color/light_bg"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="@dimen/moderate_txt"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/desc_padding"
                    android:paddingRight="@dimen/desc_padding"
                    android:text="@string/faq_answer3"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>