<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/current_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/moderate_txt"
            android:textStyle="normal"
            android:textColor="@color/dark_bg"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/dark_bg"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_current_pin"/>

        <EditText
            android:id="@+id/new_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/moderate_txt"
            android:textStyle="normal"
            android:textColor="@color/dark_bg"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/dark_bg"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_new_pin"/>

        <EditText
            android:id="@+id/new_pin_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/moderate_txt"
            android:textStyle="normal"
            android:textColor="@color/dark_bg"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/dark_bg"
            android:background="@drawable/edittext_bg"
            android:hint="@string/confirm_new_pin"/>

        <Button
            android:id="@+id/change_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/moderate_txt"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@color/light_bg"
            android:background="@drawable/purple_btn_bg_selector"
            android:text="@string/change_pin"/>

        <TextView
            android:id="@+id/error_display_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/errorColor"/>
        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    </LinearLayout>

</ScrollView>