<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_gradient_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back_btn_ic"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/transparent_selector"/>-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/app_logo"
                android:layout_centerInParent="true"
                android:padding="10dp"
                />
            <ImageButton
                android:id="@+id/settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/settings_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circular_btn_bg_selector"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/activity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/light_bg"
            android:textSize="@dimen/moderate_txt"
            android:drawableLeft="@mipmap/ticket_label_ic"
            android:drawableStart="@mipmap/ticket_label_ic"
            android:text="@string/view_ticket"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/moderate_txt"
            android:text="@string/ticket_id"/>

        <ImageView
            android:id="@+id/qrcode_holder"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content"/>
            <!--android:src="@drawable/barcode_placeholder"-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/moderate_txt"
            android:text="@string/ticket_admits"/>

        <TextView
            android:id="@+id/ticket_admit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_bg"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/light_bg"
            android:textSize="@dimen/large_txt"
            android:text="@string/default_admit_number"/>

    </LinearLayout>

</LinearLayout>